--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,21 +5,16 @@ on:
     branches:
     - master
 
-    
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: checkout
-      uses: actions/checkout@master
-    - name: install
-      uses: actions/setup-node@v1.4.2
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@v1.4.2
       run: npm install
-    - name: Generate dist
-      uses: actions/setup-node@v1.4.2
+    - uses: actions/setup-node@v1.4.2
       run: npm run generate
-    - name: Push S3
-      uses: jakejarvis/s3-sync-action@master
+    - uses: jakejarvis/s3-sync-action@master
       with:
         args: --acl public-read --follow-symlinks --delete
       env:
