--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,9 +11,8 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - uses: actions/setup-node@v1.4.2
-      run: npm install
-    - uses: actions/setup-node@v1.4.2
-      run: npm run generate
+    - run: npm install
+    - run: npm run generate
     - uses: jakejarvis/s3-sync-action@master
       with:
         args: --acl public-read --follow-symlinks --delete
